# tasks

pointers/: CMakeLists.txt  List.hpp  main.cpp  test.cpp
structures/: AnyType.cpp  AnyType.hpp  CMakeLists.txt  main.cpp  test.cpp
threads/: CMakeLists.txt  main.cpp  output.txt  testcase.cpp
